# JUCE-ConsoleApp

./: .gitignore  CMakeLists.txt  README.md
App/: ConsoleApp.jucer
